src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CMD_Credit_Limit_Expiry_Date__c</fullName>
        <description>This field should get filled with CMD information in real time.

Requirement #4227</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Limit Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMD_Credit_Limit__c</fullName>
        <description>The field should get filled with CMD information in real time.

[Requirement  #4227]</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTHeadEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CT Head Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTHead__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CT Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cares_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cares Company Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cares_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cares ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cares_Ticket_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cares Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentralDeletionBlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Central Deletion Block</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentralPostingBlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Central Posting Block</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_URL_to_Account_Plan__c</fullName>
        <description>Link to Chatter Group where Account Plan is stored. Note: Storing Account Plans in Chatter is an exception to the normal process of uploading it via standard File Upload feature to this Account. Use Chatter method only if strict access control is needed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Link to Chatter Group where Account Plan is stored. Note: Storing Account Plans in Chatter is an exception to the normal process of uploading it via standard File Upload feature to this Account. Use Chatter method only if strict access control is needed.</inlineHelpText>
        <label>Chatter Group URL to Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClassificationColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_op_Account_Created__c</fullName>
        <description>SFPRM-295 - Reusing old Co-Op Account Created field to capture which Partner Accounts should be shown in the Partner Locator Page.</description>
        <label>Display on Partner Locator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_op_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Co-op Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_op_Enabled_Date__c</fullName>
        <description>It will capture the date on which account has been enabled as Co-Op account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Co-op Enabled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryNameISO2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name ISO 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryNameISO3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name ISO 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditRatingExpiryDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Rating Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditRating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Account_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Account Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <formula>If(BEGINS(AccountNumber,&apos;1&apos;  ), AccountNumber ,
If(BEGINS(Parent.AccountNumber,&apos;1&apos;  ), Parent.AccountNumber ,&apos;Unknown&apos;))</formula>
        <label>Legal Entity Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_CPV__c</fullName>
        <label>Customer CPV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Compliance__c</fullName>
        <label>Customer Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US_ALTICE</fullName>
                </value>
                <value>
                    <fullName>US_AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>US_Company</fullName>
                </value>
                <value>
                    <fullName>US_Cox</fullName>
                </value>
                <value>
                    <fullName>US_Govern</fullName>
                </value>
                <value>
                    <fullName>US_SCEC</fullName>
                </value>
                <value>
                    <fullName>US_Sprint</fullName>
                </value>
                <value>
                    <fullName>US_T-Mobile</fullName>
                </value>
                <value>
                    <fullName>US_VWireless</fullName>
                </value>
                <value>
                    <fullName>US_VWireline</fullName>
                </value>
                <value>
                    <fullName>unassign</fullName>
                    <default>true</default>
                    <label>Unassign</label>
                </value>
                <value>
                    <fullName>WD_NATO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segmentation__c</fullName>
        <label>Customer Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Major - Maintain</fullName>
                </value>
                <value>
                    <fullName>Major - Optimize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_lifetime_value_CLTV__c</fullName>
        <description>Customer lifetime value (CLTV) - Rollup of all closed won deals</description>
        <label>Customer lifetime value (CLTV)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New Business, Renewal, Upsell/Cross Sell, One Time, Paid Pilot</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMP_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if a Digital Marketplace is set up for the account.</inlineHelpText>
        <label>DMP Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Legal_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks whether the Legal Entity is the default one or not.
The &quot;Default&quot; field should only display on the Legal Entity page layout (only editable by global process and system admins) 
Requirement#: 654</description>
        <label>Default Legal Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EChannelID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E Channel ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Send_Check__c</fullName>
        <description>Created as per the requirement in the US (HWST-1340)</description>
        <label>Email Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Shipment confirmation</fullName>
                </value>
                <value>
                    <fullName>ETA update</fullName>
                </value>
                <value>
                    <fullName>Reminder to send faulty part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Co_Op__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled in Co-Op</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCG_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FCG Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCG_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FCG Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagforDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEOLeve3Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLeve4Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 4 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLevel1ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 1 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLevel1Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLevel2ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 2 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLevel2Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOLevel3ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geo Level 3 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Address_Status__c</fullName>
        <label>Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary Address</fullName>
                    <label>Temporary</label>
                </value>
                <value>
                    <fullName>Permanent Address</fullName>
                    <label>Permanent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_TimeZone__c</fullName>
        <description>TimeZone for account billing address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Account_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Holding Account Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Account_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Holding Account Name</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>House Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hws_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hws_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hws_Address_Line_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXW Ex Works</fullName>
                </value>
                <value>
                    <fullName>FCA Free Carrier</fullName>
                </value>
                <value>
                    <fullName>CPT Carriage Paid To</fullName>
                </value>
                <value>
                    <fullName>CIP Carriage And Insurance Paid To</fullName>
                </value>
                <value>
                    <fullName>DAT Delivered At Terminal</fullName>
                </value>
                <value>
                    <fullName>DAP Delivered At Place</fullName>
                </value>
                <value>
                    <fullName>DDP Delivered Duty Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternationalAccountType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternationalCustomer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involve_Distributor_in_IR_Deal_Registrat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the Distributor will be involved in the Indirect Reseller Deal Registration Approval Process</inlineHelpText>
        <label>Involve Distributor in IR Deal Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jump_Start__c</fullName>
        <label>Jump Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JurisdictionCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Account Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Account Name</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1HierarchyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L1 Hierarchy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L1 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1ShortDesc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L1 Short Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2HierarchyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2 Hierarchy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2ShortDesc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2 Short Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L3HierarchyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L3 Hierarchy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L3 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3ShortDesc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L3 Short Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LE_Customer_Compliance__c</fullName>
        <formula>IF(ISBLANK(TEXT(Parent.Customer_Compliance__c)), &apos;Unassigned&apos;, TEXT(Parent.Customer_Compliance__c))</formula>
        <inlineHelpText>Customer Compliance value from parent 301 account.</inlineHelpText>
        <label>LE Customer Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_GEOLevel1Name__c</fullName>
        <description>Field created for CH project for reporting purpose: This is used in standard report types to find the GEO level on the parent account</description>
        <formula>Parent.GEOLevel1Name__c</formula>
        <label>LE_GEOLevel1Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_GEOLevel2Name__c</fullName>
        <description>Field created for CH project for reporting purpose: This is used in standard report types to find the GEO level on the parent account</description>
        <formula>Parent.GEOLevel2Name__c</formula>
        <label>LE_GEOLevel2Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_GEOLevel3Name__c</fullName>
        <description>Field created for CH project for reporting purpose: This is used in standard report types to find the GEO level on the parent account</description>
        <formula>Parent.GEOLeve3Name__c</formula>
        <label>LE_GEOLevel3Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L1_ID__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L1ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LE L1 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L1_Name__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L1Name__c</formula>
        <label>LE L1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L2_ID__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L2ID__c</formula>
        <label>LE L2 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L2_Name__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L2Name__c</formula>
        <label>LE L2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L3_ID__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L3ID__c</formula>
        <label>LE L3 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_L3_Name__c</fullName>
        <description>Req #909
CT CBT Not being populated in iCRM with ALCR data. Inherited L1 to L7 Information from parent Customer</description>
        <formula>Parent.L3Name__c</formula>
        <label>LE L3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomains__c</fullName>
        <description>Derived Email Domains from contact emails</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LD_EmailDomains</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Has_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Marketing_Touch_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Last Marketing Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Sales_Touch_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Last Sales Touch Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>